@@ -80,3 +80,4 @@ Changes between Qt3 and Qt4 port (to be completed)
     stop view_bottom view_right window_new
     button_cancel down fileexport pencil player_pause player_play project_open rotate rotate_ccw rotate_cw
     editdelete
+    text_block     text_center     text_left     text_right     text_sub     text_super
